# Count-Cups

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_GOALS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_improvement.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py  main.py
app/assets/: haarcascade_frontalface_default.xml
app/core/: config.py  db.py  exporter.py  logging.py  models.py  sip_logic.py
app/core/detection/: __init__.py  base.py  heuristics.py  mediapipe_impl.py
app/services/: __init__.py  notifier.py  scheduler.py
app/ui/: __init__.py  main_window.py  theme.py
app/ui/screens/: __init__.py  calibration.py  dashboard.py  history.py  live_cam.py  settings.py
docs/: ARCHITECTURE.md  CALIBRATION.md  README.md  api.md  cli.md  configuration.md  faq.md  getting-started.md  index.md  installation.md  quick-start.md  troubleshooting.md  usage.md
docs/examples/: example-01.md  example-02.md
scripts/: build_linux_nuitka.sh  build_mac_nuitka.sh  build_win_nuitka.ps1  demo_feed_generator.py  dev_run.ps1  dev_run.sh
tests/: __init__.py  test_db.py  test_detection_heuristics.py  test_sip_logic.py
